# bedcosmo

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  bed_cosmo.py  brute_force_calc.py  custom_dist.py  environment.yaml  environment.yml  evaluate.py  plotting.py  pyproject.toml  pyro_oed_src.py  requirements.txt  submit.sh  train.py  util.py
experiments/num_tracers/: README.md  design_args_unconstrained.yaml  emulator_args.yaml  emulators.yaml  eval_args.yaml  models.yaml  prior_args_fs.yaml  prior_args_posterior.yaml  prior_args_posterior_base_dr1.yaml  prior_args_posterior_base_dr2.yaml  train_args.yaml
experiments/num_tracers/cobaya/mcmc/: base.yaml  base_omegak.yaml  base_omegak_w_wa.yaml  base_w.yaml  base_w_wa.yaml
experiments/num_tracers/cobaya/polychord/: base_omegak_w_wa.yaml
experiments/num_tracers/scripts/: _gen_config_space_sigmas.py  compare_config_space_vs_emulator.py  compare_ref_cov.py  generate_ref_cov.py  plot_likelihood_error_cosmo.py  verify_emulator_likelihood.py
experiments/num_visits/: README.md  design_args.yaml  design_args_2d.yaml  design_args_extreme.yaml  eval_args.yaml  models.yaml  prior_args_bbt.yaml  prior_args_bbtm.yaml  prior_args_empirical.yaml  prior_args_empirical_eazy6.yaml  prior_args_gamma.yaml  prior_args_gamma_temp.yaml  prior_args_gamma_temp_lbol.yaml  prior_args_uniform.yaml  train_args.yaml
experiments/num_visits/scripts/: _paths.py  compare_likelihood_pdfs.py  diagnose_knn_ties.py  flow_kde_convergence.py  knn_marginal_convergence.py  plot_bb_degeneracy.py  plot_ilr_fix.py  plot_lref_normalization_concept.py  plot_posterior_kde_vs_flow.py  plot_rest_frame_sed.py  plot_ridge_discrimination.py  plot_temp_band_leverage.py  posterior_width_vs_design.py  visualize_central_sed.py
experiments/variable_redshift/: design_args.yaml  eval_args.yaml  models.yaml  train_args.yaml
experiments/variable_redshift/notebooks/: brute_force.ipynb  dense_guide.ipynb  gp_hubble_dist_1d.ipynb  gp_hubble_dist_2d.ipynb  model.ipynb  nf_train_analysis.ipynb
num_tracers/: 4_tracers.ipynb  design_args.yaml  design_args_dr1.yaml  design_args_dr2.yaml  eval.py  eval_args.yaml  evaluate.py  models.yaml  n_tracers.ipynb  n_tracers_eval.py  n_tracers_samples.ipynb  n_tracers_train.py  n_tracers_train_distributed.py  n_tracers_train_distributed2.py  nf_train_analysis.ipynb  num_tracers.py  plots.ipynb  prep_data.py  prior_args.yaml  prior_args_posterior.yaml  prior_args_posterior_base_dr1.yaml  prior_args_posterior_base_dr2.yaml  priors.yaml  priors_small.yaml  run_args.json  train_args.json  train_args.yaml
num_tracers/cobaya/: plot_cosmo_chains.py
num_tracers/cobaya/mcmc/: base.yaml  base_omegak.yaml  base_omegak_w_wa.yaml  base_w.yaml  base_w_wa.yaml
num_tracers/cobaya/polychord/: base_omegak_w_wa.yaml
num_tracers/cosmopower/: prep_data.py
num_visits/: design_args.yaml  design_args_3d.yaml  eval_args.yaml  num_visits.py  priors.yaml  train_args.yaml
scripts/: create_run.py  entropy_training.sh  gamma_n_tracers_train.sh  seed_n_tracers_train.sh  truncate_metrics.py
scripts/entropy/: debug.sh  eval.sh  restart.sh  resume.sh  submit.sh  train.sh
scripts/entropy_models/: estimators.py  plot.py  validation.py
scripts/local/: debug.sh  eval.sh  restart.sh  resume.sh  submit.sh  train.sh
scripts/slurm/: cobaya.sh  debug.sh  eval.sh  grid.sh  grid_calc.sh  knn_ksweep.sh  restart.sh  resume.sh  submit.sh  train.sh  train_prior_flow.sh
src/bedcosmo/: __init__.py  base.py  brute_force.py  cosmology.py  custom_dist.py  entropy.py  evaluate.py  grid_calc.py  plotting.py  profiling.py  pyro_oed_src.py  train.py  transform.py  util.py
src/bedcosmo/num_tracers/: __init__.py  cmb_likelihood.py  commander.py  design.py  experiment.py  prep_tracer_data.py  prior_flow_cache.py  train_cmb.py
src/bedcosmo/num_tracers/cobaya/: plot_cosmo_chains.py
src/bedcosmo/num_tracers/cosmopower/: train_cp.py
src/bedcosmo/num_tracers/emulator/: README.md  eval_nn.py  model.py  scale_data.py  test_cov_scaling.py  tracers.yaml  train_nn.py  util.py
src/bedcosmo/num_tracers/shapefit/: __init__.py  plot_data.py  prep_data.py  train_nn.py
src/bedcosmo/num_tracers/shapefit_emulator/: README.md  eval_nn.py  model.py  predict.py  prep_shapefit_data.py  prep_shapefit_errors.py  train_nn.py  util.py
src/bedcosmo/num_visits/: __init__.py  build_designs.py  design.py  experiment.py  plot_diagnostics.py
src/bedcosmo/num_visits/empirical/: README.md  __init__.py  build_prior.py  combine_healpix_weights.py  desi_get_dr_subset.py  (+15 more)
src/bedcosmo/variable_redshift/: __init__.py  experiment.py
tests/: __init__.py  conftest.py  test_bijector_joint_gaussianizer.py  test_central_params.py  test_compute_prior_log_probs.py  test_empirical_artifact_snapshot.py  test_empirical_paths.py  test_empirical_simplex.py  test_entropy_estimators_nd.py  test_experiment.py  test_kde_entropy_toy_2d.py  test_marginal_eig.py  test_num_tracers_passed_ntracers.py  test_num_tracers_sigma_scaling.py  test_num_visits_eazy_prior.py  test_plotting.py  test_prior_flow_as_prior.py  test_sed_prior_paths.py  test_sed_prior_simplex.py  test_target_params.py  test_transform_input.py
tests/helpers/: __init__.py  kde_entropy_toy.py
variable_redshift/: adaptive.ipynb  brute_force.ipynb  design_args.yaml  eval_args.yaml  models.yaml  nflow_guide.ipynb  priors.yaml  priors_hrdrag.yaml  run_args.json  train_args.yaml  train_nf.py  variable_error.ipynb  variable_redshift.py
(+25 files in other folders)
